some links updated

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <div class="bannerContainer">
         <div class="headine">Win Smarter with Expert <br> Bet Predictions</div>
         <div class="Subtext">Daily upload predictions for football, tennis & more</div>
-        <button class="sectionBtn">GET TODAYS TIPS</button>
+        <a href="#"><button class="sectionBtn">GET TODAYS TIPS</button></a>
       </div>
       <div class="bannerImageContainer">
         <div >
@@ -220,7 +220,7 @@
          
 
         </div>
-        <a class="view-prediction">View more prediction</a>
+        <a href="#" class="view-prediction">View more prediction</a>
       </div>
     </section>
 
@@ -235,7 +235,7 @@
             <div class="news-detail">
               <div><p class="news-category">laliga sport</p></div>
               <div class="new-publicationDate">THU 11.09.2022</div>
-              <div class="news-title">DEBELE LALIGA sport player of the month DEBELE LALIGA sport player of the month</div>
+              <div class="news-title"><a href="#">DEBELE LALIGA sport player of the month DEBELE LALIGA sport player of the month</a></div>
               <div class="reed-news"><a href="#">view</a></div>
             </div>
           </div>
@@ -247,7 +247,7 @@
             <div class="news-detail">
               <div><p class="news-category">laliga sport</p></div>
               <div class="new-publicationDate">THU 11.09.2022</div>
-              <div class="news-title">DEBELE LALIGA sport player of </div>
+              <div class="news-title"><a href="#">DEBELE LALIGA sport player of </a></div>
               <div class="reed-news"><a href="#">view</a></div>
             </div>
           </div>
@@ -259,7 +259,7 @@
             <div class="news-detail">
               <div><p class="news-category">laliga sport</p></div>
               <div class="new-publicationDate">THU 11.09.2022</div>
-              <div class="news-title">Joan Garcia, LALIGA EA SPORTS Best Save of the Month in August</div>
+              <div class="news-title"><a href="#"> Joan Garcia, LALIGA EA SPORTS Best Save of the Month in August</a></div>
               <div class="reed-news"><a href="#">view</a></div>
             </div>
           </div>
@@ -333,53 +333,12 @@
         </div>
       </div>
     </section>
-    
-    <!-- <section class="whyUsSection">
-      <div class="subHeadings">WHY CHOOSE US</div>
-      <div class="whyCardContainer">
-        <div class="whyUsCard">
-          <div class="icons"><i class="fa-solid fa-chart-simple"></i></div>
-          <div class="text">Data-Driven Analysis</div>
-        </div>
-        <div class="whyUsCard">
-          <div class="icons"><i class="fa-solid fa-fire"></i></div>
-          <div class="text">High Success Rate</div>
-        </div>
-        <div class="whyUsCard">
-          <div class="icons"><i class="fa-solid fa-clock"></i></div>
-          <div class="text">Daily Updates</div>
-        </div><div class="whyUsCard">
-          <div class="icons"><i class="fa-solid fa-sack-dollar"></i></div>
-          <div class="text">Maximize Your Winnings</div>
-        </div>
-      </div>
-    </section>
-  
-
-    <section class="testimonialSection">
-      <div class="testimonialContainer">
-        <div class="subHeadings">TESTIMONIALS</div>
-        <div class="comment">I increased my win by 40% after following BetSmart</div>
-        <div class="userName">john k.</div>
-        <div>Rating</div>
-      </div>
-    </section>
-
-
-    <section class="NewsLetterSection">
-      <div class=" NewsLetterContainer">
-        <div class="headine">NewsLetter</div>
-        <div class="blogText">Never Miss a Winning Tip!</div>
-        <div class="inputCtn"><input type="email" placeholder="ENTER YOUR EMAIL"></div>
-        <button>SUBSCRIBE</button>
-      </div>
-    </section> -->
   </main>
 
   <footer>
     <div class="footer-container">
       <div class="footerLogo-Ctn"><img src="images/logo/ChatGPT Image Sep 18, 2025, 05_38_09 AM.png" alt=""></div>
-      <div class="social-media">Follow Us: <span><i class="fa-brands fa-x-twitter"></i></span> <span><i class="fa-brands fa-instagram"></i></span> <span><i class="fa-brands fa-whatsapp"></i></span></div>
+      <div class="social-media">Follow Us: <span><a href="#"><i class="fa-brands fa-x-twitter"></i></a></span> <span><a href="#"><i class="fa-brands fa-instagram"></i></a></span> <span><a href="#"><i class="fa-brands fa-whatsapp"></i></a></span></div>
       <div class="footer-detail">
         <div><a href="#">Terms of Use</a></div>
         <div><a href="#">Responsible Gambling</a></div>
